--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "homepage": "https://github.com/TheScenery/listen-with-you#readme",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -33,7 +37,6 @@
     "apicache": "^1.2.3",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
-    "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
