--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.11",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-onclickoutside": "^6.7.1",
     "react-popper": "^1.3.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
