--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-onclickoutside": "^6.7.1",
     "react-popper": "^1.3.0",
     "react-redux": "^5.1.1",
+    "react-redux-toastr": "^7.4.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   },
